flagger-sample/artifacts/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample
  namespace: test
  labels:
    app: sample
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
  selector:
    matchLabels:
      app: sample
  template:
    metadata:
      labels:
        app: sample
    spec:
      containers:
        - name: sample
          image: your_registry/flagger_test/sample
          ports:
            - containerPort: 80
              name: http
              protocol: TCP
