flagger-sample/artifacts/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample
  namespace: test
  labels:
    app: sample
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: sample
