flagger-sample/artifacts/virtual_service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: sample
  namespace: test
spec:
  hosts:
    - "*"
  gateways:
    - istio-autogenerated-k8s-ingress.istio-system.svc.cluster.local
  http:
  - route:
    - destination:
        host:
          sample
        port:
          number: 80
